# DonCEy-Kong-Jr.

./: .gitignore
Client/: CMakeLists.txt  main.c
Client/src/gui/: allegro_window.c  allegro_window.h  gui.c  gui.h
Client/src/logic/: Game.h
Client/src/logic/entity/: Crocodile.h  DKJr.h  Fruit.h
Client/src/logic/lists/: CrocodileNode.c  CrocodileNode.h  FruitNode.c  FruitNode.h
Client/src/socket/: Serializer.h  Socket.c  Socket.h  constants.h
Server/src/: Main.java  SocketServerExample.java  main.java
Server/src/App/: Window.java
Server/src/Game/: DonkeyKongJunior.java  Fruit.java  Game.java  GameObject.java  Matrix.java
Server/src/Game/Cocodriles/: BlueCocodrile.java  Cocodrile.java  RedCocodrile.java
Server/src/Game/Entities/: BlueCrocodile.java  BlueCrocodrile.java  Cocodrile.java  Crocodile.java  Crocodrile.java  DonkeyKongJunior.java  Fruit.java  GameObject.java  RedCrocodile.java  RedCrocodrile.java
Server/src/Game/Entities/Crocodriles/: BlueCrocodile.java  Crocodile.java  CrocodileFactory.java  RedCrocodile.java
Server/src/Server/: Client.java  ClientHandler.java  Serializer.java  Server.java
client/: CMakeLists.txt  constants.h  main.c  menu.c  menu.h
client/Game/: game.c  game.h
client/Game/gameObject/: DonkeyKongJr.c  DonkeyKongJr.h  enemy.c  enemy.h  fruit.c  fruit.h
client/SocketClient/: Serializer.c  Serializer.h  Socket.c  Socket.h  cJson.c  cJson.h
